Made collapse buttons fixed in position

--- a/bingosync-app/static/bingosync/style.css
+++ b/bingosync-app/static/bingosync/style.css
@@ -115,6 +115,11 @@
     padding-right: 5px;
 }
 
+.collapse-button {
+    position: absolute;
+    right: 2.2em;
+}
+
 /* plain old square */
 .square {
     color: #fff;
